# raspi-tracer

./: README.md
PC/: OpenCVcamera.py
RasberryPi/: CMakeLists.txt  display.sh
RasberryPi/src/: approx.h  foot.cpp  foot.h  foot.hpp  includes.h  main.cpp  main.h  motor.cpp  motor.h
raspi/: hello.py  openCV.py  pwm.py  val.py
